Refactored Events to handle single and recurring events